added succes page

--- a/public/news.html
+++ b/public/news.html
@@ -209,7 +209,7 @@
               <a href="javascript:void(0)" class="message">
                 <img src="images/message_trigger.svg" alt="message" />
               </a>
-              <a href="#" class="internet-bank">
+              <a href="#" class="internet-bank" style="margin-right: 0;">
                 <img src="images/o_banking.svg" alt="o_banking" />
                 <span>İnternet-bank</span>
               </a>
