--- a/public/success.html
+++ b/public/success.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Serfeli Bank Kredit Faizleri ve Şərtləri - Kredit Pul Goturmek
-    </title>
     <link
       rel="shortcut icon"
       href="../public/images/apple-touch-icon-152x152.webp"
@@ -16,9 +13,10 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
+    <title>Success loan request | Yelo Bank</title>
   </head>
 
-  <body>
+  <body class="o-hiddene">
     <div class="mobile-top" style="background-image: url(images/modal_bg.webp)">
       <div class="mobile-top-inner">
         <div class="logo-side">
@@ -107,145 +105,13 @@
       </div>
     </div>
 
-    <div class="bg-color"></div>
-
-    <div class="modals">
-      <div class="modals-group">
-        <div class="modal-item" data-modal="stories-modal">
-          <div class="modal-content">
-            <div class="swiper storiesSwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide st" data-index="1">
-                  <div class="slide-content bg-green">
-                    <div class="text">
-                      <b
-                        >Kartın bütün üstünlüklərini 1 storidə sığdırmaq
-                        çətindir, amma düyməyə sıxaraq hamısı ilə tanış ola
-                        bilərsən.
-                      </b>
-                      <div class="action">
-                        <div class="left-side">
-                          <a href="#" class="yelo-btn">Sifariş et</a>
-                        </div>
-                        <div class="right-side">
-                          <a href="#">
-                            <div class="more-details">
-                              <span>Daha ətraflı</span>
-                              <img
-                                src="images/bl_arr_bttn.svg"
-                                alt="bl_arr_bttn"
-                              />
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="bg-img">
-                      <img
-                        src="images/yelo-kart-500x500_1.webp"
-                        alt="yelo-kart"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="swiper-slide st" data-index="2">
-                  <div class="slide-content bg-blue">
-                    <div class="text">
-                      <b
-                        >Kredit sifarişi Yelo Bank ilə daha rahatdır, sadəcə
-                        sorğu formasını doldurmaq kifayətdir.</b
-                      >
-                      <div class="action">
-                        <div class="left-side">
-                          <a href="#" class="yelo-btn">Sifariş et</a>
-                        </div>
-                        <div class="right-side">
-                          <a href="#">
-                            <div class="more-details">
-                              <span>Daha ətraflı</span>
-                              <img
-                                src="images/bl_arr_bttn.svg"
-                                alt="bl_arr_bttn"
-                              />
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="bg-img">
-                      <img
-                        src="images/kredit-banner-500x500.webp"
-                        alt="kredit-banner"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="swiper-slide st" data-index="3">
-                  <div class="slide-content bg-red">
-                    <div class="text">
-                      <b>
-                        <p>
-                          Xarici saytlardan hər sifarişdə taksit fürsəti və 70
-                          gün güzəşt müddətindən faydalanmaq üçün aşağıdakı sarı
-                          düyməyə kliklə&nbsp;
-                        </p>
-                      </b>
-                      <div class="action">
-                        <div class="left-side">
-                          <a href="#" class="yelo-btn">Sifariş et</a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="bg-img">
-                      <img
-                        src="images/taksit-karti-500x500.webp"
-                        alt="taksit-karti"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="stories-nav">
-              <div
-                class="modal-close"
-                style="background-image: url(images/close.svg)"
-              ></div>
-              <div class="swiper-button-next swiper-button"></div>
-              <div class="swiper-button-prev swiper-button"></div>
-              <div class="swiper-stories-pagination"></div>
-            </div>
-            <div class="stories-progress">
-              <ul>
-                <li>
-                  <div class="bar">
-                    <div class="holder index-0"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="bar">
-                    <div class="holder index-1"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="bar">
-                    <div class="holder index-2"></div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <header>
+    <header class="news_page">
       <div class="header-top">
         <div class="wrapper">
           <div class="section-nav">
             <ul>
               <li>
-                <a href="index.html" class="active">Fərdi</a>
+                <a href="index.html">Fərdi</a>
               </li>
               <li>
                 <a href="#">Biznes</a>
@@ -312,27 +178,12 @@
                 <img src="images/logo.svg" alt="logo" />
               </a>
             </div>
-            <nav class="navbar">
-              <ul>
-                <li>
-                  <a href="loans.html" class="active">Kreditlər</a>
-                </li>
-                <li>
-                  <a href="cards.html">Kartlar</a>
-                </li>
-                <li>
-                  <a href="№">Əmanətlət</a>
-                </li>
-                <li>
-                  <a href="cashback.html">Cashback</a>
-                </li>
-              </ul>
-            </nav>
+
             <div class="right-side">
               <a href="javascript:void(0)" class="message">
                 <img src="images/message_trigger.svg" alt="message" />
               </a>
-              <a href="#" class="internet-bank">
+              <a href="#" class="internet-bank" style="margin-right: 0">
                 <img src="images/o_banking.svg" alt="o_banking" />
                 <span>İnternet-bank</span>
               </a>
@@ -547,99 +398,72 @@
     </header>
 
     <main>
-      <!-- Entrance -->
-      <section class="s_title">
+      <section class="success">
         <div class="container">
-          <div class="page_title">
-            <h1>Kreditlər</h1>
+          <div class="success_message">
+            <h2>Təşəkkür edirik</h2>
             <p>
-              Xərclərini təxirə salma, çünki dəstək üçün hər zaman Yelo Bank
-              var. İndi kredit pul götürmək çox asan və sürətlidir. Sizə uyğun
-              sərfəli bank kredit şərtləri və aşağı faizləri ilə istənilən növ
-              kredit pul almaq üçün elə indi müraciət edərək, cəmi 2 dəqiqəyə
-              bank krediti əldə edin!
+              Ən qısa zamanda əməkdaşlarmız tərəfindən sorğunuza baxılacaq..
             </p>
+            <div class="icon">
+              <img src="../public/images/success_letter_icon.svg" alt="" />
+            </div>
           </div>
-        </div>
-      </section>
-
-      <!-- Loans -->
-
-      <section id="cards">
-        <div class="container">
-          <div class="cards">
-          </div>
-        </div>
-      </section>
-
-      <!-- Stories Section  -->
-
-      <section class="stroies-section">
-        <div class="group">
-          <div class="title container">
-            <b>Storilər</b>
-            <span class="counter">3</span>
-          </div>
-          <div thumbsSlider="" class="swiper stories container">
-            <div class="swiper-wrapper">
-              <div class="story swiper-slide">
-                <a href="javascript:void(0)" data-slide="1">
-                  <div class="story-desc">
-                    <span class="tag">Yelo kart</span>
-                    <b
-                      >Yelo Kart hər əməliyyatda rahatlıq anlayışını
-                      dəyişəcək</b
+          <div class="get_app">
+            <div class="download_app">
+              <h2>Mobil tətbiqi indi yüklə</h2>
+              <div class="app-links">
+                <ul>
+                  <li>
+                    <a
+                      href="https://apps.apple.com/az/app/yelo/id1515449668"
+                      target="_blank"
+                      class="app-link"
                     >
-                  </div>
-                  <div class="story-image">
-                    <img
-                      src="images/yelo-kart-500x500_1.webp"
-                      alt="yelo-kart"
-                    />
-                  </div>
-                </a>
-              </div>
-              <div class="story swiper-slide">
-                <a href="javascript:void(0)" data-slide="2">
-                  <div class="story-desc">
-                    <span class="tag">Kredit</span>
-                    <b
-                      >Xərclərini təxirə salma, hər zaman dəstək üçün Yelo Bank
-                      var</b
+                      <div class="app apple">
+                        <span>Download on the</span>
+                        <p>App Store</p>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://play.google.com/store/apps/details?id=az.yelo.app&hl=ru&pli=1"
+                      target="_blank"
+                      class="app-link"
                     >
-                  </div>
-                  <div class="story-image">
-                    <img
-                      src="images/kredit-banner-500x500.webp"
-                      alt="kredit-banner"
-                    />
-                  </div>
-                </a>
-              </div>
-              <div class="story swiper-slide">
-                <a href="javascript:void(0)" data-slide="3">
-                  <div class="story-desc">
-                    <span class="tag">Hissələ</span>
-                    <b
-                      >Yelo kredit/taksit kartı ilə indi xərclə, 24 ay ərzində
-                      hissə-hissə ödə</b
+                      <div class="app android">
+                        <span>Get it on</span>
+                        <p>Google Play</p>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://appgallery.huawei.com/#/app/C104500649"
+                      target="_blank"
+                      class="app-link"
                     >
-                  </div>
-                  <div class="story-image">
-                    <img
-                      src="images/taksit-karti-500x500.webp"
-                      alt="taksit-karti"
-                    />
-                  </div>
-                </a>
+                      <div class="app huawei">
+                        <span>Get it on</span>
+                        <p>AppGallery</p>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </div>
+            <div class="app_qr_code">
+              <span>
+                <img src="../public/images/qr_code.svg" alt="qr_code" />
+              </span>
             </div>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="p_cards">
+    <footer>
       <div class="container">
         <nav class="foot-nav">
           <div>
@@ -851,9 +675,7 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script src="../src/js/main.js"></script>
-    <script src="../src/js/loan.js"></script>
-    <script src="../src/js/swiper.js"></script>
   </body>
 </html>
