added deposits page

--- a/public/cards.html
+++ b/public/cards.html
@@ -321,7 +321,7 @@
                   <a href="cards.html" class="active">Kartlar</a>
                 </li>
                 <li>
-                  <a href="№">Əmanətlət</a>
+                  <a href="deposits.html">Əmanətlər</a>
                 </li>
                 <li>
                   <a href="cashback.html">Cashback</a>
@@ -401,7 +401,7 @@
                   </ul>
                 </div>
                 <div class="menu-item">
-                  <a href="#">Əmanətlər</a>
+                  <a href="deposits.html">Əmanətlər</a>
                   <ul>
                     <li>
                       <a href="#">Yelo Sabit</a>
@@ -646,7 +646,7 @@
             <ul>
               <li><a href="loans.html">Kreditlər</a></li>
               <li><a href="cards.html">Kartlar</a></li>
-              <li><a href="#">Əmanətlər</a></li>
+              <li><a href="deposits.html">Əmanətlər</a></li>
               <li>
                 <a href="#">Pul köçürmələri</a>
               </li>
