--- a/public/deposits.html
+++ b/public/deposits.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Serfeli Bank Kredit Faizleri ve Şərtləri - Kredit Pul Goturmek
-    </title>
     <link
       rel="shortcut icon"
       href="../public/images/apple-touch-icon-152x152.webp"
@@ -16,6 +13,9 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
+    <title>
+      Pulsuz Online Kart Sifarisi: Bank Kartlari - Plastik Kart Sifarişi
+    </title>
   </head>
 
   <body>
@@ -315,13 +315,13 @@
             <nav class="navbar">
               <ul>
                 <li>
-                  <a href="loans.html" class="active">Kreditlər</a>
+                  <a href="loans.html">Kreditlər</a>
                 </li>
                 <li>
-                  <a href="cards.html">Kartlar</a>
+                  <a href="cards.html" >Kartlar</a>
                 </li>
                 <li>
-                  <a href="deposits.html">Əmanətlər</a>
+                  <a href="deposits.html" class="active">Əmanətlər</a>
                 </li>
                 <li>
                   <a href="cashback.html">Cashback</a>
@@ -551,23 +551,20 @@
       <section class="s_title">
         <div class="container">
           <div class="page_title">
-            <h1>Kreditlər</h1>
+            <h1>Əmanətlər</h1>
             <p>
-              Xərclərini təxirə salma, çünki dəstək üçün hər zaman Yelo Bank
-              var. İndi kredit pul götürmək çox asan və sürətlidir. Sizə uyğun
-              sərfəli bank kredit şərtləri və aşağı faizləri ilə istənilən növ
-              kredit pul almaq üçün elə indi müraciət edərək, cəmi 2 dəqiqəyə
-              bank krediti əldə edin!
+                Pulunuz sizin üçün işləsin
             </p>
           </div>
         </div>
       </section>
 
-      <!-- Loans -->
+      <!-- Cards -->
 
       <section id="cards">
         <div class="container">
           <div class="cards">
+
           </div>
         </div>
       </section>
@@ -853,7 +850,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
-    <script src="../src/js/loan.js"></script>
+    <script src="../src/js/deposits.js"></script>
     <script src="../src/js/swiper.js"></script>
   </body>
 </html>
