--- a/public/success.html
+++ b/public/success.html
@@ -252,7 +252,7 @@
                   </ul>
                 </div>
                 <div class="menu-item">
-                  <a href="#">Əmanətlər</a>
+                  <a href="deposits.html">Əmanətlər</a>
                   <ul>
                     <li>
                       <a href="#">Yelo Sabit</a>
@@ -471,7 +471,7 @@
             <ul>
               <li><a href="loans.html">Kreditlər</a></li>
               <li><a href="cards.html">Kartlar</a></li>
-              <li><a href="#">Əmanətlər</a></li>
+              <li><a href="deposits.html">Əmanətlər</a></li>
               <li>
                 <a href="#">Pul köçürmələri</a>
               </li>
