adding exchange currency page

--- a/public/deposits.html
+++ b/public/deposits.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
     <title>
-      Pulsuz Online Kart Sifarisi: Bank Kartlari - Plastik Kart Sifarişi
+      Əmanətlər - Yelo Depozit ilə Yüksək Gəlirli Əmanət Faizləri
     </title>
   </head>
 
