--- a/public/index.html
+++ b/public/index.html
@@ -900,10 +900,10 @@
                       <div class="select-content">
                         <ul>
                           <li>
-                            <a data-cash="1" href="#" class="active">Nağd</a>
+                            <a data-cash="1" href="javascript:void(0)" class="active">Nağd</a>
                           </li>
                           <li>
-                            <a data-cash="0" href="#" class="">Nağdsız</a>
+                            <a data-cash="0" href="javascript:void(0)" class="">Nağdsız</a>
                           </li>
                         </ul>
                       </div>
@@ -960,7 +960,7 @@
                         data-curr="eur"
                         data-cash="1.7700"
                         data-nocash="1.7700"
-                        >1.7700</b
+                        >1.8400</b
                       >
                     </div>
                     <div class="c-item">
@@ -970,14 +970,14 @@
                         data-curr="usd"
                         data-cash="1.7000"
                         data-nocash="1.7020"
-                        >1.7000</b
+                        >1.7010</b
                       >
                       <b
                         class="cr-item-sell"
                         data-curr="eur"
                         data-cash="1.8600"
                         data-nocash="1.8600"
-                        >1.8600</b
+                        >1.9400</b
                       >
                     </div>
                   </div>
